# mp2-lab6-Translator

./: .gitignore  BUILD_RELEASE.bat  CMakeLists.txt  README.md  create_release_antlr4-dll.bat  create_sln_release.bat
core/antlr/lib/: gtest.lib
core/antlr/lib/pkgconfig/: gmock.pc  gtest.pc
core/include/: CalcEvalVisitor.hpp  Data.hpp  DataFunctions.hpp  DataMath.hpp  Interpreter.hpp  ProgramMemory.hpp  ThrowingErrorListener.hpp  common.hpp  empty.hpp
core/src/: CalcEvalVisitor.cpp  Data.cpp  DataFunctions.cpp  DataMath.cpp  Interpreter.cpp  ProgramMemory.cpp  empty.cpp
grammar/: generate_parser.bat
grammar/grammar_build/: Calc.interp  Calc.tokens  CalcBaseListener.h  CalcBaseVisitor.h  CalcLexer.cpp  CalcLexer.h  CalcLexer.interp  CalcLexer.tokens  CalcListener.h  CalcParser.cpp  CalcParser.h  CalcVisitor.h  MyGrammar.interp  MyGrammar.tokens  MyGrammarBaseListener.cpp  MyGrammarBaseListener.h  MyGrammarBaseVisitor.cpp  MyGrammarBaseVisitor.h  MyGrammarLexer.cpp  MyGrammarLexer.h  MyGrammarLexer.interp  MyGrammarListener.cpp  MyGrammarListener.h  MyGrammarParser.cpp  MyGrammarParser.h  MyGrammarVisitor.cpp  MyGrammarVisitor.h
grammar/grammar_source/: Calc.g4  MyGrammar.g4
grammar/grammar_visualization/: input.txt  run_grammar_visualization.bat
interface/: console_interface.cpp
tests/: test_Interpreter.cpp  test_empty.cpp
